Fix the UI screen size toggle bug.
Signed-off-by: David Qiu <david@davidqiu.com>

--- a/web/views/home.ejs
+++ b/web/views/home.ejs
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <html>
 
-
-<head>
-  
+<head>  
   <!-- Website Title -->
   <title>Home - Nodedown</title>
-  
   <!-- Bootstrap Core CSS -->
   <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css">
-
 </head>
-
 
 <body>
   
@@ -19,7 +14,13 @@
   <div class="navbar navbar-inverse" role="navigation">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="/">Nodedown</a>
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Project name</a>
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
@@ -42,12 +43,9 @@
 
 </body>
 
-
 <!-- JQuery -->
 <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
-
 <!-- Bootstrap Core JavaScript -->
 <script src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-
 
 </html>
