--- a/web/views/content.ejs
+++ b/web/views/content.ejs
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
 <html>
 
-
-<head>
-  
+<head>  
   <!-- Website Title -->
   <title><%= content %> - <%= user %> - Nodedown</title>
-  
   <!-- Bootstrap Core CSS -->
   <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css">
-  
   <!-- JQuery -->
   <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
-
 </head>
-
 
 <body>
   
@@ -22,7 +16,13 @@
   <div class="navbar navbar-inverse" role="navigation">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="/">Nodedown</a>
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Project name</a>
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
@@ -60,16 +60,13 @@
 
 </body>
 
-
 <!-- Bootstrap Features for Markdown Content -->
 <script>
   $(document).ready(function() {
     $('h1,h2,h3,h4,h5,h6').addClass('page-header');
   });
 </script>
-
 <!-- Bootstrap Core JavaScript -->
 <script src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-
 
 </html>
