--- a/web/views/user.ejs
+++ b/web/views/user.ejs
@@ -5,7 +5,7 @@
   <!-- Website Title -->
   <title><%= user %> - Nodedown</title>
   <!-- Bootstrap Core CSS -->
-  <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/static/bootstrap/3.2.0/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -45,8 +45,8 @@
 </body>
 
 <!-- JQuery -->
-<script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
+<script src="/static/jquery/1.11.1/jquery.min.js"></script>
 <!-- Bootstrap Core JavaScript -->
-<script src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<script src="/static/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
 </html>
