--- a/web/views/user.ejs
+++ b/web/views/user.ejs
@@ -25,7 +25,7 @@
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li><a href="/">Home</a></li>
-          <li class="active"><a href="/<%= user %>/"><%= user %></a></li>
+          <li class="active"><a href="/<%= encodeURIComponent(user) %>/"><%= user %></a></li>
         </ul>
       </div>
     </div>
@@ -37,7 +37,7 @@
     <h1 class="page-header"><%= user %>'s Contents</h1>
     <div class="list-group">
       <% for (var content in contents) { %>
-      <a class="list-group-item" href="<%= contents[content] %>"><%= content %></a>
+      <a class="list-group-item" href="/<%= encodeURIComponent(user) %>/<%= encodeURIComponent(content) %>/"><%= content %></a>
       <% } %>
     </div>
   </div>
