--- a/web/views/home.ejs
+++ b/web/views/home.ejs
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 
-<head>  
+<head>
+  <!-- Website Meta -->
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
+  <meta charset="utf-8">
   <!-- Website Title -->
   <title>Home - Nodedown</title>
   <!-- Bootstrap Core CSS -->
