--- a/web/views/home.ejs
+++ b/web/views/home.ejs
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-  <!-- Website Meta -->
+  <!-- Web Page Meta -->
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
   <meta charset="utf-8">
-  <!-- Website Title -->
+  <!-- Web Page Title -->
   <title>Home - Nodedown</title>
   <!-- Bootstrap Core CSS -->
   <link rel="stylesheet" href="/static/bootstrap/3.2.0/css/bootstrap.min.css">
