--- a/web/views/category.ejs
+++ b/web/views/category.ejs
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 
-<head>  
+<head>
   <!-- Web Page Meta -->
-  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,category-scalable=no">
   <meta charset="utf-8">
   <!-- Web Page Title -->
-  <title><%= user %> - Nodedown</title>
+  <title><%= category %> - Nodedown</title>
   <!-- Bootstrap Core CSS -->
   <link rel="stylesheet" href="/static/bootstrap/3.2.0/css/bootstrap.min.css">
 </head>
 
 <body>
-  
+
   <!-- Navigation Bar -->
   <div class="navbar navbar-inverse" role="navigation">
     <div class="container">
@@ -28,19 +28,19 @@
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li><a href="/">Home</a></li>
-          <li class="active"><a href="/<%= encodeURIComponent(user) %>/"><%= user %></a></li>
+          <li class="active"><a href="/<%= encodeURIComponent(category) %>/"><%= category %></a></li>
         </ul>
       </div>
     </div>
   </div>
-  
+
   <!-- Main Content -->
   <div class="container">
     <!-- Content List -->
-    <h1 class="page-header"><%= user %>'s Contents</h1>
+    <h1 class="page-header"><%= category %>'s Contents</h1>
     <div class="list-group">
       <% for (var content in contents) { %>
-      <a class="list-group-item" href="/<%= encodeURIComponent(user) %>/<%= encodeURIComponent(content) %>/"><%= content %></a>
+      <a class="list-group-item" href="/<%= encodeURIComponent(category) %>/<%= encodeURIComponent(content) %>/"><%= content %></a>
       <% } %>
     </div>
   </div>
