--- a/web/views/content.ejs
+++ b/web/views/content.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 
-<head>  
+<head>
   <!-- Web Page Meta -->
-  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,category-scalable=no">
   <meta charset="utf-8">
   <!-- Web Page Title -->
-  <title><%= content %> - <%= user %> - Nodedown</title>
+  <title><%= content %> - <%= category %> - Nodedown</title>
   <!-- Bootstrap Core CSS -->
   <link rel="stylesheet" href="/static/bootstrap/3.2.0/css/bootstrap.min.css">
   <!-- Bootstrap Docs CSS -->
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-  
+
   <!-- Navigation Bar -->
   <div class="navbar navbar-inverse" role="navigation">
     <div class="container">
@@ -45,13 +45,13 @@
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li><a href="/">Home</a></li>
-          <li><a href="/<%= encodeURIComponent(user) %>/"><%= user %></a></li>
-          <li class="active"><a href="/<%= encodeURIComponent(user) %>/<%= encodeURIComponent(content) %>/"><%= content %></a></li>
+          <li><a href="/<%= encodeURIComponent(category) %>/"><%= category %></a></li>
+          <li class="active"><a href="/<%= encodeURIComponent(category) %>/<%= encodeURIComponent(content) %>/"><%= content %></a></li>
         </ul>
       </div>
     </div>
   </div>
-  
+
   <!-- Page Content -->
   <div class="container bs-docs-container">
     <div class="row">
@@ -70,13 +70,13 @@
             <ul>
               <% for (var attachment in attachments) { %>
               <script>$('#attachment-box').show();</script>
-              <li><a href="/<%= encodeURIComponent(user) %>/<%= encodeURIComponent(content) %>/<%= encodeURIComponent(attachment) %>" target="_blank"><%= attachment %></a></li>
+              <li><a href="/<%= encodeURIComponent(category) %>/<%= encodeURIComponent(content) %>/<%= encodeURIComponent(attachment) %>" target="_blank"><%= attachment %></a></li>
               <% } %>
             </ul>
           </div>
         </div>
       </div>
-      
+
       <!-- Content Navigation Sidebar -->
       <div class="col-md-3">
         <div id='sidenav' class="bs-docs-sidebar hidden-print hidden-xs hidden-sm affix-top" role="complementary">
@@ -98,7 +98,7 @@
   $(document).ready(function() {
     $('h1,h2,h3,h4,h5,h6').addClass('page-header');
   });
-  
+
   // Generate document navigation sidebar
   var hcount = new Array(undefined,0,0,0,0,0,0);
   var nodes = document.getElementById('main').childNodes;
