--- a/web/views/home.ejs
+++ b/web/views/home.ejs
@@ -34,7 +34,7 @@
   </div>
 
   <!-- Main Content -->
-  <div class="container">
+  <div class="container" style="min-height: 600px;">
     <!-- Category List -->
     <h1 class="page-header">Table of Contents</h1>
     <div class="list-group">
@@ -43,6 +43,9 @@
       <% } %>
     </div>
   </div>
+
+  <!-- Footer -->
+  <% include component-footer %>
 
 </body>
 
