--- a/web/views/content.ejs
+++ b/web/views/content.ejs
@@ -53,7 +53,7 @@
   </div>
 
   <!-- Page Content -->
-  <div class="container bs-docs-container">
+  <div class="container bs-docs-container" style="min-height: 600px;">
     <div class="row">
 
       <!-- Content Main Field -->
@@ -89,6 +89,9 @@
 
     </div>
   </div>
+
+  <!-- Footer -->
+  <% include component-footer %>
 
 </body>
 
